# Handy

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  ARCHITECTURE.md  AUTH.md  BUILD.md  BUILD_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_TRANSLATIONS.md  Cargo.toml  DBUS_USAGE.md  DEVLOG.md  DEVOPS.md  FIX.md  FIX_SUMMARY.md  LICENSE  LOCALIZATION.md  LOCAL_API.md  ORIGINAL_REQUEST.md  PKGBUILD  PROJECT.md  README.md  SPEC.md  TEST_INFRA.md  UPDATER_SETUP_SUMMARY.md  UPSTREAM.md  VECTOR.md  bun.lockb  components.json  dev.sh  eslint.config.js  flake.nix  handy+MASR.md  handy-fr-i18n.patch  index.html  install.sh  migration_log.txt  (+12 more)
.agents/: original_prompt.md
.agents/auditor_m1_1/: BRIEFING.md  handoff.md  progress.md
.agents/explorer_1/: BRIEFING.md  original_prompt.md  progress.md
.agents/explorer_gen2_1/: BRIEFING.md  analysis.md  handoff.md  original_prompt.md  progress.md
.agents/explorer_m1_1/: BRIEFING.md  analysis.md  handoff.md  progress.md
.agents/orchestrator/: BRIEFING.md  original_prompt.md  progress.md
.agents/orchestrator_gen2/: BRIEFING.md  PROJECT.md  original_prompt.md  progress.md
.agents/orchestrator_gmail_tasks/: .gitkeep  briefing.md  plan.md  progress.md
.agents/reviewer_m1_1/: BRIEFING.md  handoff.md  progress.md
.agents/reviewer_m1_1_rep/: BRIEFING.md  handoff.md  progress.md
.agents/reviewer_m1_2/: briefing.md  handoff.md  progress.md
.agents/sentinel/: BRIEFING.md  handoff.md
.agents/sub_orch_m1/: BRIEFING.md  SCOPE.md  handoff.md  progress.md
.agents/worker_api_key/: BRIEFING.md  original_prompt.md  progress.md
.agents/worker_m1_1/: briefing.md  handoff.md  progress.md
.cargo/: config.toml
.claude/: launch.json  settings.json
.claude/docs/: 2025-12-07-01_streaming-output-architecture.md
.claude/scripts/: suggest-decisions.sh
.dev-team/: CONTEXT.md  README.md  spec.template.md
.gemini/agents/: verifier.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-flatpak.yml  build-test.yml  build.yml  code-quality.yml  e2e.yml  installer-artifacts.yml  lint.yml  macos-build.yml  main-build.yml  mobile-ci.yml  nix-check.yml  playwright.yml  pr-build-windows.yml  pr-test-build.yml  prettier.yml  release.yml  test-portable-zip.yml  test.yml  windows-test-installer.yml
.nix/: bun-lock-hash  bun.nix
.nix/scripts/: canonicalize-node-modules.ts  normalize-bun-binaries.ts
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  README.md  STACK.md  STRUCTURE.md  TESTING.md
benchmark/: .gitignore  README.md  add_noise.py  generate.py  results_cpu.md  results_gpu.md  results_test_ml.md  results_whisper_large_cpu.md  results_whisper_large_gpu.md  results_whisper_turbo_cpu.md  results_whisper_turbo_gpu.md  transcripts.json  write_transcripts_json.py
contrib/udev/: 70-handy-keys.rules  postinst.sh
crates/handy-core/: Cargo.toml
crates/handy-core/src/: lib.rs
crates/handy-core/src/audio/: mod.rs  utils.rs
crates/handy-core/src/history/: mod.rs  retention.rs
crates/handy-core/src/model/: engine.rs  info.rs  mod.rs  progress.rs
crates/handy-core/src/settings/: mod.rs
crates/handy-core/src/vad/: mod.rs  silero.rs
crates/handy-platform/: Cargo.toml
crates/handy-platform/src/: audio.rs  event_sink.rs  lib.rs  storage.rs  text_output.rs
docs/: EMBEDDED_PYTHON.md  README.md  bundled-models.md  codebase-overview.md  decisions.md  decisions_pending.md  fork-strategy.md  handy-stt-ipc.md  latency-investigation.md  livestt-integration-plan.md  livestt-mock-server.md  offline-translation.md  qwen3-asr-setup.md  scaffold.md  system-requirements.md
docs/PRs/: general_postprocess.md
docs/mobile/: README.md
docs/plans/: 2026-01-14-saytype-api-design.md  2026-02-18-version-history-viewer-design.md  2026-02-23-cloud-transcription-design.md  2026-02-23-cloud-transcription-impl.md  2026-02-23-cloud-transcription.md  2026-02-24-gemini-transcription-design.md  2026-02-24-gemini-transcription-impl.md  2026-02-25-cloud-providers-refactor-design.md  2026-02-25-cloud-providers-refactor-impl.md
features/wake-word/: plan.md
gnome-extension/: README.md  extension.js  install.sh  metadata.json  stylesheet.css
handy-keys/: .cargo_vcs_info.json  Cargo.toml
handystt-sidebar/: INSTALL.md  README.md  background.js  manifest.json  sidepanel.css  sidepanel.html  sidepanel.js
nix/: hm-module.nix  module.nix
public/: splashscreen.html  word-lists
scripts/: build-flatpak.sh  build-with-python.sh  check-nix-deps.ts  check-translations.cjs  check-translations.ts  enter-build-env.ps1  gen_catalog.py  ggml-cpu-baseline.cmake  install-python-deps.sh  livestt_mock_server.mjs  make_malayalam_tarball.ps1  prepare-bundled-models.mjs  run_tests.ps1  setup-embedded-python.sh  tauri-wrapper.mjs  tauri.sh
src/: App.css  App.tsx  bindings.ts  i18n.ts  i18n.ts.example  main.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  apple_intelligence.swift  build.rs  bundled-models.json  cargo_tree.txt  tauri.conf.json  tauri.dev.conf.json  tauri.store.conf.json  tauri.windows.conf.json
src-tauri/HID-BLE-Rust/: Cargo.toml  Class1.cs  Moser_HID_Startup_Rust_迁移说明.md  README.md
src-tauri/HID-BLE-Rust/src/: device_initializer.rs  lib.rs  macos_impl.rs  models.rs  moser_hid_startup.rs  ports.rs  shared_hid_reader.rs
src-tauri/HID-BLE-Rust/src/windows_impl/: ble_device_init.rs  logger.rs  manufacturer_resolver.rs  mod.rs  powershell.rs  usb_helper.rs  yzw_hogp_usage.rs
src-tauri/discord-sidecar/: Cargo.toml
src-tauri/discord-sidecar/src/: main.rs
storybook/: index.html  main.tsx  storybook.css  storybook.tsx
tests/: app.spec.ts  google_integration.spec.ts  helpers.ts  meeting_assistant.spec.ts  output_language.spec.ts
word-lists/: index.json  legal.txt  medical.txt  programming.txt
(+796 files in other folders)
