[workspace]
members  = ["src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["cjpais", "唐海文"]

[workspace.dependencies]
# 共享版本号,后续 crate 引用 workspace = true
anyhow            = "1"
log               = "0.4"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
tokio             = { version = "1.43", features = ["sync", "rt", "rt-multi-thread", "macros"] }
async-trait       = "0.1"
thiserror         = "2"
chrono            = { version = "0.4", features = ["serde"] }
regex             = "1"
rusqlite          = { version = "0.37", features = ["bundled"] }
rusqlite_migration = "2.3"
reqwest           = { version = "0.12", features = ["json", "stream"] }
futures-util      = "0.3"
hound             = "3.5.1"
rubato            = "0.16.2"
rustfft           = "6.4.0"
strsim            = "0.11.0"
natural           = "0.5.0"
once_cell         = "1"
transcribe-rs     = { path = "src-tauri/vendor/transcribe-rs", features = ["whisper", "onnx"] }
vad-rs            = { git = "https://github.com/cjpais/vad-rs", default-features = false }
ferrous-opencc    = "0.2.3"

# 桌面专属 (不被 handy-core 引用),但放 workspace 统一版本
tauri             = { version = "2.10.2", default-features = false }
specta            = "=2.0.0-rc.22"
tauri-specta      = { version = "=2.0.0-rc.21", default-features = false }

[patch.crates-io]
# 沿用 src-tauri 现有 patch
tauri-runtime     = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.10.2" }
tauri-runtime-wry = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.10.2" }
tauri-utils       = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.10.2" }
# Vendored copy of transcribe-rs with the Windows-target `features = ["vulkan"]`
# dependency on whisper-rs stripped. Upstream hard-codes Vulkan on Windows, which
# makes handy.exe statically import vulkan-1.dll at load time — on machines with
# a Vulkan 1.0-only loader (old Win10 LTSC, dated GPU drivers) the loader fails
# with "无法定位程序输入点 vkGetPhysicalDeviceFeatures2" before Rust ever runs.
# Reason: documented in the Windows crash-on-launch RCA. Re-sync this vendor
# directory if transcribe-rs is bumped.
transcribe-rs     = { path = "src-tauri/vendor/transcribe-rs" }

[profile.dev]
incremental = true

[profile.release]
lto              = true
codegen-units    = 1
strip            = true
panic            = "unwind"
