[package]
name        = "handy-core"
version     = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Platform-agnostic core for Handy: transcription, VAD, model, history, settings."

[lib]
name = "handy_core"
path = "src/lib.rs"

[dependencies]
anyhow      = { workspace = true }
log         = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
regex          = { workspace = true }
strsim         = { workspace = true }
natural        = { workspace = true }
ferrous-opencc = { workspace = true }
once_cell      = { workspace = true }
rubato         = { workspace = true }
rustfft        = { workspace = true }
vad-rs         = { workspace = true }
hound              = { workspace = true }
rusqlite           = { workspace = true }
rusqlite_migration = { workspace = true }
chrono             = { workspace = true }

[dependencies.handy-platform]
path = "../handy-platform"

[dev-dependencies]
tempfile = "3"
