[package]
name        = "handy-platform"
version     = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Platform abstraction traits used by handy-core and implemented by host apps."

[lib]
name = "handy_platform"
path = "src/lib.rs"

[dependencies]
anyhow      = { workspace = true }
async-trait = { workspace = true }
log         = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
