[package]
name = "aimouse_device_init"
version = "0.1.0"
edition = "2021"

[lib]
name = "aimouse_device_init"
path = "src/lib.rs"

[dependencies]
log = "0.4"

[target.'cfg(windows)'.dependencies]
hidapi = { version = "2", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
hidapi = { version = "2", default-features = false, features = ["macos-shared-device"] }
